# baudelaire

./: .gitignore  README.md  make.sh  pyproject.toml
baudelaire/: __init__.py
config/: default.yaml
static/: logo.xcf  template.xcf
tests/: rage.md  rage.txt  test.py
