[tool.poetry]
name = "baudelaire"
version = "0.2.0"
description = "Take a poem and make it an Instagram post"
authors = ["Chris Czarnecki"]
license = "MIT"
readme = "README.md"
include = [
    { path = "templates", format=["sdist", "wheel"] },
    { path = "fonts", format=["sdist", "wheel"] },
    { path = "config", format=["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.1.0"
rich = "^13.9.4"
confuk = "^0.6.3"
click = "^8.1.8"
mistune = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
baudelaire = "baudelaire:main"
